--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "mini-dashboard",
   "version": "0.2.14",
+  "homepage": "https://meilisearch.github.io/musicbrainz-demo",
   "private": true,
   "dependencies": {
     "@meilisearch/instant-meilisearch": "^1.0.0",
@@ -22,6 +23,8 @@
     "styled-system": "^5.1.5"
   },
   "scripts": {
+    "predeploy": "react-scripts build",
+    "deploy": "gh-pages -d build",
     "version-script": "node version-script.js",
     "prestart": "yarn version-script",
     "prebuild": "yarn version-script",
@@ -60,6 +63,7 @@
     "eslint-plugin-jsx-a11y": "^6.7.0",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.31.11",
+    "gh-pages": "^6.1.1",
     "prettier": "^3.2.5",
     "storybook": "^8.0.10"
   },
