Disable the prettier/prettier eslint rule

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,12 +25,7 @@
   "rules": {
     "semi": 0,
     "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
-    "prettier/prettier": [
-      "error",
-      {
-        "semi": false
-      }
-    ],
+    "prettier/prettier": "off",
     "react/prop-types": 0,
     "jsx-indent-props": 0,
     "react/jsx-props-no-spreading": 0,
