--- a/.github/workflows/deploy-stage.yml
+++ b/.github/workflows/deploy-stage.yml
@@ -17,8 +17,8 @@ jobs:
         yarn
         yarn build
       env:
-        REACT_APP_MEILI_SERVER_ADDRESS: ${{ secrets.REACT_APP_MEILI_SERVER_ADDRESS }}
-        REACT_APP_MEILI_API_KEY: ${{ secrets.REACT_APP_MEILI_API_KEY }}
+        REACT_APP_MEILI_SERVER_ADDRESS: ${{ vars.REACT_APP_MEILI_SERVER_ADDRESS }}
+        REACT_APP_MEILI_API_KEY: ${{ vars.REACT_APP_MEILI_API_KEY }}
 
     - name: Deploy
       uses: JamesIves/github-pages-deploy-action@releases/v4
