--- a/.github/workflows/deploy-stage.yml
+++ b/.github/workflows/deploy-stage.yml
@@ -13,10 +13,12 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Build
-      # will use the GitHub env variables
       run: |
         yarn
         yarn build
+      env:
+        REACT_APP_MEILI_SERVER_ADDRESS: ${{ env.REACT_APP_MEILI_SERVER_ADDRESS }}
+        REACT_APP_MEILI_API_KEY: ${{ env.REACT_APP_MEILI_API_KEY }}
 
     - name: Deploy
       uses: JamesIves/github-pages-deploy-action@v4
