--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,11 +1,8 @@
 blank_issues_enabled: false
 contact_links:
-  - name: Meilisearch's bug
+  - name: Bug in Meilisearch
     url: https://github.com/meilisearch/meilisearch/issues
-    about: Please report issues regarding Meilisearch's code base here
-  - name: Feature request & feedback about Meilisearch
-    url: https://github.com/meilisearch/product/discussions/categories/feedback-feature-proposal
-    about: Please open a discussion or comment an already-existing one in our dedicated product repository
+    about: Please report issues regarding Meilisearch in the dedicated repository
   - name: Support questions & other
     url: https://discord.meilisearch.com/
     about: Support is not handled here but on our Discord
